# parinfer-mcp-server

./: .gitignore  Cargo.toml  MCP_USAGE.md  MIGRATION_NOTES.md  Makefile  README.md  SUMMARY.md  test-mcp.sh  test_mcp_manual.md
src/: main.rs
test-data/: expected-02.txt  expected-03.txt  input-02.txt  input-03.txt
tests/: integration_test.rs  smoke-test-mcp.py
