[package]
name = "parinfer-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parinfer-mcp-server"
path = "src/main.rs"

[dependencies]
parinfer_rust = { git = "https://github.com/eraserhd/parinfer-rust.git" }
rmcp = { version = "0.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
